--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<div class="container">
+  <div class="main">
+    <div class="row">
+      <div class="col-md-6 left-side d-flex flex-column justify-content-center">
+        <div class="menue">
+          <i class="fas fa-bars"></i>
+        </div>
+        <h1 class="title">Subscribe to get regular updates!</h1>
+        <label for="email"> Enter Your Email</label>
+        <div class="mail-input">
+          <input id="email" type="email" class="form-input" placeholder="ex. moaaz.eldesoky1@gmail.com">
+          <div class="icon"><i class="fas fa-envelope"></i></div>
+        </div>
+        <button class="btn btn-primary">Go!</button>
+      </div>
+
+      <div class="col-md-6 right-side d-flex flex-column justify-content-center">
+        <div class="close">
+          <i class="fas fa-times"></i>
+        </div>
+        <h1 class="title">Hello there!<br> Welcome Back</h1>
+        <div class="login-form d-flex flex-column justify-content-center">
+          <div class="username-input">
+            <input type="text" class="username" placeholder="Username">
+            <div class="icon"><i class="fas fa-user"></i></div>
+          </div>
+          <div class="pass-input">
+            <input type="password" class="password" placeholder="Password">
+            <div class="icon"><i class="fas fa-lock"></i></div>
+          </div>
+          <button type="submit" class="btn btn-primary">Sign in</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
