complate the logic for Auth register and login.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,4 @@
 <p>admin works!</p>
+<h1>congrates you logged in as an admin</h1>
+<p>you can Logout </p>
+<button class="btn btn-primary" (click)="logUserOut()">Logout</button>
