--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,35 @@
-<p>home works!</p>
+<div class="container">
+  <div class="navb">
+    <div class="row">
+      <div class="col-md-4">
+        <i class="fas fa-globe"></i>
+        <select class="dropdown">
+          <option value="en">English</option>
+          <option value="ar">Arabic</option>
+        </select>
+      </div>
+      <div class="col-md-4 offset-md-4 d-flex login-part">
+        <p>already have an account? </p>
+        <button class="btn btn-primary login-btn"><a [routerLink]="['/login']"
+            routerLinkActive="router-link-active">Login</a>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="welcome-page text-center">
+    <div class="title">
+      <h1>Welcome to Our Application</h1>
+      <p>Please register or login to continue.</p>
+    </div>
+    <div class="buttons d-flex flex-column">
+      <button class="btn btn-primary"><a [routerLink]="['/register']" routerLinkActive="router-link-active">Sign up with
+          Google</a></button>
+      <button class="btn btn-primary"><a [routerLink]="['/register']" routerLinkActive="router-link-active">Sign up with
+          microsoft</a></button>
+      <p>or</p>
+      <button class="btn btn-primary"><a [routerLink]="['/register']" routerLinkActive="router-link-active">Sign up with
+          Email</a></button>
+    </div>
+  </div>
+</div>
