--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -72,6 +72,11 @@
   position: relative;
 }
 
+.right-side .mail-input {
+  position: relative;
+  color: #667af3;
+}
+
 .mail-input i {
   position: absolute;
   top: 6px;
@@ -100,7 +105,7 @@
   background-color: #667af3;
 }
 
-.right-side .email-input,
+.right-side .username-input,
 .right-side .pass-input {
   position: relative;
 }
@@ -109,10 +114,10 @@
   padding-left: 20px;
 }
 
-.email-input i,
+.username-input i,
 .pass-input i {
   position: absolute;
-  top: 5px;
+  top: 2px;
   color: #667af3;
 }
 
@@ -142,4 +147,6 @@
 
 .alert {
   width: 80%;
+  height: 40px;
+  padding-top: 7px;
 }
